@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 dnl configure.in for gnuplot on Unix.
 dnl
-dnl $Id: configure.in,v 1.248.2.10 2010/02/07 23:17:34 sfeam Exp $
+dnl $Id: configure.in,v 1.248.2.11 2010/02/18 05:52:48 sfeam Exp $
 dnl
 dnl AC_INIT must match the release number
 AC_INIT(gnuplot, 4.4.0-rc1)
@@ -98,9 +98,9 @@ AM_CONDITIONAL(BUILD_GNUPLOT_X11, test "$no_x" != yes)
 dnl change location of X11 defaults
 AC_ARG_WITH(x-app-defaultdir,dnl
 [  --with-x-app-defaultdir=DIR       location of X11 application defaults
-                          (default SYSCONFDIR/X11/app-defaults/PACKAGE/VERSION)],
+                          (default /etc/X11/app-defaults/)],
   X11_APPDEFAULTS_DIR="$withval",
-  X11_APPDEFAULTS_DIR="$sysconfdir/X11/app-defaults/$PACKAGE/$VERSION_MAJOR")
+  X11_APPDEFAULTS_DIR="/etc/X11/app-defaults/")
 
 dnl Operating systems.
 dnl FIXME AC_DEFINE(ISC22)
@@ -1406,6 +1406,11 @@ if test "$with_lasergnu" = yes; then
   AC_MSG_RESULT([  lasergnu printer script: yes])
 else
   AC_MSG_RESULT([  lasergnu printer script: no (use --with-lasergnu to enable)])
+fi
+
+AC_ARG_VAR(DIST_CONTACT,[Contact address for modified and binary distributed gnuplot versions])
+if test -n "${DIST_CONTACT}"; then
+  AC_DEFINE_UNQUOTED([DIST_CONTACT],["$DIST_CONTACT"],[Contact address for modified and binary distributed gnuplot versions])
 fi
 
 if test "$with_lisp_files" != no; then
